(lang dune 3.0)
(name cfg_parser)
(version 1.0.0)
(authors "Juan Manuel Young Hoyos" "Santiago Restrepo" "Mateo Ardila")
(license MIT)
(generate_opam_files true)
(documentation "https://github.com/Youngermaster/Context-Free-Grammar-Parser")
(source (github Youngermaster/Context-Free-Grammar-Parser))
